k8s/overlays/aws/academy-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: async-furious-service
  namespace: async-furious
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
